--- a/gallery.html
+++ b/gallery.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Картинки</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Git - крута штука!!!</h1>
-    <img src="./images/1_iL2.png" alt="">
-    <img src="./images/0989.png" alt="">
-    <h3><a href="./index.html">Back</a></h3>
+    
 </body>
 </html>
