--- a/index.html
+++ b/index.html
@@ -4,19 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Список команд</title>
+    <title>Document</title>
 </head>
 <body>
-<h1><a href="gallery.html">Git</a> - дуже корисна система!</h1>
-<img src="./images/download.png" alt="">
-<h2>В Git існує багато команд.</h2>
-<h3> Ось <a href="./images/Screenshot_2-min.png" target="_blank">деякі</a> з них:</h3>
-<ul>
-    <li>git init.</li>
-    <li>git add.</li>
-    <li>git commit.</li>
-    <li>git remote add.</li>
-    <li>git push.</li>
-</ul>
+    
 </body>
 </html>
